tests/compile_fail/max_timers_negative.c
#define MTIMER_MAX_TIMERS (-1)
#include "../../include/mtimer_config.h"

int main(void)
{
    return 0;
}
